WIP: add mail API
